--- a/src/index.html
+++ b/src/index.html
@@ -12,14 +12,96 @@
 </head>
 
 <body>
+    <div class="container">
+        <h1 class="text-center mt-3">Scientific Calculator</h1>
 
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 col-xxl-4">
+                <div class="card">
+                    <div class="card-body">
+                        <input type="text" id="calc-display" readonly class="form-control form-control-lg text-end"
+                            aria-label="Sizing example input">
 
+                        <div class="row mt-3 gx-1">
+                            <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">(</button>
+                            </div>
+                            <div class="col-3">
+                                 <button type="button" class="btn btn-light w-100 mt-2 border">)</button>
+                            </div>
+                           <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">%</button>
+                            </div>
+                            <div class="col-3">
+                                 <button type="button" class="btn btn-light w-100 mt-2 border">AC</button>
+                            </div>
+
+                             <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">7</button>
+                            </div>
+                            <div class="col-3">
+                                 <button type="button" class="btn btn-light w-100 mt-2 border">8</button>
+                            </div>
+                           <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">9</button>
+                            </div>
+                            <div class="col-3">
+                                 <button type="button" class="btn btn-light w-100 mt-2 border">÷</button>
+                            </div>
+
+                             <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">4</button>
+                            </div>
+                            <div class="col-3">
+                                 <button type="button" class="btn btn-light w-100 mt-2 border">5</button>
+                            </div>
+                           <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">6</button>
+                            </div>
+                            <div class="col-3">
+                                 <button type="button" class="btn btn-light w-100 mt-2 border">*</button>
+                            </div>
+
+                             <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">1</button>
+                            </div>
+                            <div class="col-3">
+                                 <button type="button" class="btn btn-light w-100 mt-2 border">2</button>
+                            </div>
+                           <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">3</button>
+                            </div>
+                            <div class="col-3">
+                                 <button type="button" class="btn btn-light w-100 mt-2 border">-</button>
+                            </div>
+
+                             <div class="col-3">
+                                <button type="button" class="btn btn-light w-100 mt-2 border">0</button>
+                            </div>
+                            <div class="col-3">
+                                 <button type="button" class="btn btn-light w-100 mt-2 border">.</button>
+                            </div>
+                           <div class="col-3">
+                                <button type="button" class="btn btn-primary w-100 mt-2 border border-primary">=</button>
+                            </div>
+                            <div class="col-3">
+                                 <button type="button" class="btn btn-light w-100 mt-2 border">+</button>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+     
+    <script src="script.js" type="text/javascript"> </script>    
 </body>
 
 </html>
